Make small changes on q1 client